--- a/style/main.css
+++ b/style/main.css
@@ -3,11 +3,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--background-principal);
 }
 
 :root{
-    --texto-principal: #000;
-    --verde-principal: green;
+    --background-principal: rgb(245, 245, 224);
+    --texto-principal: #1f1f1f;
+    --verde-principal: rgba(56, 128, 15, 0.815);
+    --verde-botao: rgb(1, 77, 1);
 }
 
 .line-header{
@@ -19,5 +22,50 @@
 .label{
     font-size: 20px;
     font-weight: bold;
+    margin-bottom: 12px;
     color: var(--texto-principal);
+    cursor: pointer;
+}
+
+.input{
+    font-size: 20px;
+    padding: 12px;
+    margin-bottom: 25px;
+    border: 1px solid var(--verde-principal)
+}
+
+.input-error{
+    border-color: red;
+}
+
+.button{
+    font-size: 20px;
+    font-weight: bold;
+    border: 1px solid transparent;
+    border-radius: 12px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all ease 0.3s;
+}
+
+.button-principal{
+    color: #fff;
+    background-color: var(--verde-botao);
+}
+
+.button-principal:hover{
+    background-color: transparent;
+    color: var(--verde-botao);
+    border: 1px solid var(--verde-botao)
+}
+
+.button-secundario{
+    background-color: transparent;
+    border: 1px solid var(--verde-botao);
+    color: var(--verde-botao);
+}
+
+.button-secundario:hover{
+    color: #fff;
+    background-color: var(--verde-botao);
 }
