--- a/style/main.css
+++ b/style/main.css
@@ -23,13 +23,13 @@
 .form{
     display: flex;
     flex-direction: column;   
-    padding: 90px 180px;
+    padding: 45px 180px;
 }
 
 .label{
     font-size: 20px;
     font-weight: bold;
-    margin-bottom: 12px;
+    margin: 15px 0 6px;
     color: var(--texto-principal);
     cursor: pointer;
 }
@@ -37,7 +37,7 @@
 .input{
     font-size: 20px;
     padding: 12px;
-    margin-bottom: 25px;
+    margin: 6px 0 12px;
     border: 1px solid var(--verde-principal)
 }
 
