--- a/style/cadastro.css
+++ b/style/cadastro.css
@@ -1,3 +1,5 @@
+@import url('./main.css');
+
 .list-requisitos{
     padding: 12px 0;
 }
@@ -7,5 +9,5 @@
 }
 
 span{
-    color: red;
+    color: var(--erro-texto);
 }
