--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,26 +7,34 @@
     background-color: var(--background-principal);
 }
 
-:root{
+:root {
     --background-principal: rgb(245, 245, 224);
     --texto-principal: #1f1f1f;
+    --texto-secundario: #fff;
     --verde-principal: rgba(56, 128, 15, 0.815);
     --verde-botao: rgb(1, 77, 1);
+    --erro-texto: red;
+    --erro-background: rgb(226, 158, 158);
 }
 
-.header{
+.header {
     height: 50px;
     width: 100%;
+    padding: 12px 16px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
     background-color: var(--verde-principal);
 }
 
-.form{
+.form {
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;
     padding: 45px 180px;
 }
 
-.label{
+.label {
     font-size: 20px;
     font-weight: bold;
     margin: 15px 0 6px;
@@ -34,18 +42,18 @@
     cursor: pointer;
 }
 
-.input{
+.input {
     font-size: 20px;
     padding: 12px;
     margin: 6px 0 12px;
     border: 1px solid var(--verde-principal)
 }
 
-.input-error{
-    border-color: red;
+.input-error {
+    border-color: var(--erro-texto);
 }
 
-.button{
+.button {
     font-size: 20px;
     font-weight: bold;
     border: 1px solid transparent;
@@ -55,36 +63,44 @@
     transition: all ease 0.3s;
 }
 
-.button-principal{
-    color: #fff;
+.button-principal {
+    color: var(--texto-secundario);
     background-color: var(--verde-botao);
 }
 
-.button-principal:hover{
-    background-color: transparent;
-    color: var(--verde-botao);
-    border: 1px solid var(--verde-botao)
+.button-principal:hover {
+    opacity: 0.8;
 }
 
-.button-secundario{
+.button-secundario {
     background-color: transparent;
     border: 1px solid var(--verde-botao);
     color: var(--verde-botao);
 }
 
-.button-secundario:hover{
-    color: #fff;
+.button-secundario:hover {
+    color: var(--texto-secundario);
     background-color: var(--verde-botao);
 }
 
+.button-back {
+    background: none;
+    text-decoration: none;
+    color: var(--texto-secundario);
+}
+
+.button-back:hover{
+    opacity: 0.7;
+}
+
 @media (max-width: 1024px) {
-    .form{
+    .form {
         padding: 45px;
     }
 }
 
 @media (max-width: 1024px) {
-    .form{
+    .form {
         padding: 20px;
     }
 }
