--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
-    background-color: var(--background-principal);
 }
 
 :root {
@@ -15,6 +14,10 @@
     --verde-botao: rgb(1, 77, 1);
     --erro-texto: red;
     --erro-background: rgb(226, 158, 158);
+}
+
+body{
+    background-color: var(--background-principal);
 }
 
 .header {
