--- a/style/main.css
+++ b/style/main.css
@@ -10,7 +10,7 @@
     --background-principal: rgb(245, 245, 224);
     --texto-principal: #1f1f1f;
     --texto-secundario: #fff;
-    --verde-principal: rgba(56, 128, 15, 0.815);
+    --verde-principal: rgba(56, 128, 15);
     --verde-botao: rgb(1, 77, 1);
     --erro-texto: red;
     --erro-background: rgb(226, 158, 158);
@@ -21,14 +21,61 @@ body{
 }
 
 .header {
-    height: 50px;
     width: 100%;
-    padding: 12px 16px;
+    padding: 10px 32px;
     position: sticky;
     top: 0;
     left: 0;
     z-index: 1;
     background-color: var(--verde-principal);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-links{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-list{
+    display: flex;
+    gap: 16px;
+}
+
+.header-icon{
+    width: 50px;
+    transition: all ease 0.3s;
+}
+
+.header-icon:hover{
+    opacity: 0.7;
+}
+
+.header-link{
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    transition: all ease 0.3s;
+}
+
+.header-link:hover{
+    opacity: 0.7;
+}
+
+.header-secundary{
+    justify-content: left;
+}
+
+@media (max-width: 520px){
+    .header{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        padding-bottom: 16px;
+    }
 }
 
 .form {
@@ -96,13 +143,23 @@ body{
     opacity: 0.7;
 }
 
+.footer{
+    background-color: var(--verde-principal);
+    text-align: center;
+    color: var(--background-principal);
+    padding: 12px 0;
+}
+.footer-logo{
+    width: 120px;
+}
+
 @media (max-width: 1024px) {
     .form {
         padding: 45px;
     }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 760px) {
     .form {
         padding: 20px;
     }
