--- a/style/_home.css
+++ b/style/_home.css
@@ -1,3 +1,5 @@
+@import url('./_variaveis.css');
+
 .logo-header{
   width: 90px; 
 }
@@ -14,7 +16,7 @@
 }
 
 .title{
-  color: green;
+  color: var(--verde-principal);
   text-align: center;
   font-size: 32px;
   padding-bottom: 20px;
@@ -24,7 +26,7 @@
   margin: 12px 0;
   padding: 12px;
   font-size: 20px;
-  border: 1px solid green;
+  border: 1px solid var(--verde-principal);
   border-radius: 6px;
 }
 
@@ -48,7 +50,7 @@
   justify-content: center;
   text-decoration: none;
   border-radius: 12px;
-  background-color: rgb(168, 227, 168);
+  background-color: var(--verde-secundario);
 }
 
 .categoria-item:hover{
@@ -57,7 +59,7 @@
 
 .categoria-item>a{
   text-decoration: none;
-  color: #000;
+  color: var(--texto-terciario);
 }
 
 .destaque-lista{
@@ -72,7 +74,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  background-color: rgb(168, 227, 168);
+  background-color: var(--verde-secundario);
   border-radius: 12px;
 }
 
@@ -90,13 +92,13 @@
 
 .destaque-title{
   font-size: 22px;
-  color: rgb(0, 53, 0);
+  color: var(--verde-botao);
   text-align: center;
 }
 
 .destaque-text{
   font-size: 14px;
-  color: rgb(0, 53, 0);
+  color: var(--verde-botao);
 }
 
 .destaque-comprar{
@@ -109,5 +111,5 @@
 .destaque-comprar>p{
   font-size: 20px;
   font-weight: bold;
-  color: rgb(0, 53, 0);
+  color: var(--verde-botao);
 }
