--- a/style/_login.css
+++ b/style/_login.css
@@ -6,6 +6,13 @@
     gap: 10px;
 }
 
+.form-option{
+    display: flex;
+    padding: 32px;
+    gap: 32px;
+    justify-content: center;
+}
+
 .mensagem-erro{
     background-color: var(--erro-background);
     border-radius: 6px;
