--- a/style/main.css
+++ b/style/main.css
@@ -22,13 +22,13 @@ body{
     background-color: var(--verde-principal);
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .header-links{
+    width: 100%;
     display: flex;
-    align-items: center;
-    gap: 40px;
+    align-items:center;
+    justify-content: space-between;
 }
 
 .header-list{
@@ -56,18 +56,14 @@ body{
     opacity: 0.7;
 }
 
-.header-secundary{
-    justify-content: left;
+#menu-hamburguer{
+    color: white;
+    font-size: 25px;
+    display: none;
 }
 
-@media (max-width: 520px){
-    .header{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 20px;
-        padding-bottom: 16px;
-    }
+.header-secundary{
+    justify-content: left;
 }
 
 .form {
@@ -152,6 +148,19 @@ body{
 }
 
 @media (max-width: 760px) {
+    .header-links{
+        flex-direction: column-reverse;
+        display: none;
+    }
+
+    .header-list{
+        flex-direction: column;
+    }
+
+    #menu-hamburguer{
+        display: block;
+    }
+
     .form {
         padding: 20px;
     }
