--- a/style/_home.css
+++ b/style/_home.css
@@ -87,7 +87,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  padding: 12px;
+  padding: 16px;
 }
 
 .destaque-title{
@@ -112,4 +112,38 @@
   font-size: 20px;
   font-weight: bold;
   color: var(--verde-botao);
+}
+
+@media (max-width: 760px){
+    .carrosselECategorias{
+      display: flex;
+      flex-direction: column-reverse;
+    }
+
+    .container:first-of-type{
+      padding: 0;
+    }
+
+    .title-categorias{
+        display: none;
+    }
+
+    .categoria-item{
+      border-radius: 0;
+      height: 70px;
+    }
+
+    .categoria-img{
+      width: 50px;
+    }
+
+    .categoria-link{
+      display: none;
+    }
+
+    .destaque-title{
+      text-align: left;
+      font-size: 16px;
+    }
+
 }
