--- a/style/main.css
+++ b/style/main.css
@@ -12,6 +12,12 @@ body{
     background-color: var(--background-principal);
 }
 
+.container{
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+}
+
 .header {
     width: 100%;
     padding: 10px 32px;
