--- a/style/main.css
+++ b/style/main.css
@@ -76,13 +76,13 @@ body{
 }
 
 #btn-close{
-    color: white;
+    color: var(--texto-secundario);
     font-size: 25px;
     display: none;
 }
 
 #menu-hamburguer{
-    color: white;
+    color: var(--texto-secundario);
     font-size: 25px;
     display: none;
 }
@@ -158,6 +158,7 @@ body{
     color: var(--background-principal);
     padding: 12px 0;
 }
+
 .footer-logo{
     width: 120px;
 }
@@ -165,6 +166,10 @@ body{
 @media (max-width: 1024px) {
     .form {
         padding: 45px;
+    }
+
+    .footer-logo{
+        width: 60px;
     }
 }
 
