--- a/style/rating_style.css
+++ b/style/rating_style.css
@@ -3,6 +3,21 @@
     cursor: pointer;
     padding: 5px;
 }
+.star1 {
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+}
+.star2 {
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+}
+.star3 {
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+}
 
 .rating {
     display: flex;
