--- a/style/desktop/_produtos.css
+++ b/style/desktop/_produtos.css
@@ -1,25 +1,32 @@
+@import url('../_variaveis.css');
+
 .produtos{
-    display: grid;
-    grid-template-columns: 1fr auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .filtro{
-    background-color: red;
+    background-color: var(--verde-secundario);
+    width: 100%;
+    display: none;
+}
+
+.filtro-form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px 30px;
 }
 
 .produtos-categoria{
-    max-width: 90vw;
     padding: 0 50px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.list-produtos{
-    background-color: blue;
-}
-
 .produtos{
-    max-width: 380px;
+    max-width: 300px;
     width: 100%;
 }
