--- a/style/rating_style.css
+++ b/style/rating_style.css
@@ -1,40 +1,92 @@
-.star {
-    font-size: 24px;
-    cursor: pointer;
-    padding: 5px;
-}
-.star1 {
-    font-size: 24px;
-    cursor: pointer;
-    padding: 5px;
-}
-.star2 {
-    font-size: 24px;
-    cursor: pointer;
-    padding: 5px;
-}
-.star3 {
-    font-size: 24px;
-    cursor: pointer;
-    padding: 5px;
-}
-
 .rating {
-    display: flex;
-    justify-content: center;
+display: inline-block;
 }
 
-.rating1 {
-    display: flex;
-    justify-content: center;
+.rating input {
+display: none;
 }
 
-.rating2 {
-    display: flex;
-    justify-content: center;
+.rating label {
+float: right;
+cursor: pointer;
+color: #ccc;
+transition: color 0.3s;
 }
 
-.rating3 {
-    display: flex;
-    justify-content: center;
+.rating label:before {
+content: '\2605';
+font-size: 30px;
+}
+
+.rating input:checked ~ label,
+.rating label:hover,
+.rating label:hover ~ label {
+color: green;
+transition: color 0.3s;
+}
+
+
+
+
+.btn-favorite input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.btn-favorite {
+display: block;
+position: relative;
+cursor: pointer;
+font-size: 20px;
+user-select: none;
+transition: 100ms;
+}
+
+.checkmark {
+top: 0;
+left: 0;
+height: 2em;
+width: 2em;
+transition: 100ms;
+animation: dislike_effect 400ms ease;
+}
+
+.btn-favorite input:checked ~ .checkmark path {
+fill: #FF5353;
+stroke-width: 0;
+}
+
+.btn-favorite input:checked ~ .checkmark {
+animation: like_effect 400ms ease;
+}
+
+@keyframes like_effect {
+0% {
+    transform: scale(0);
+}
+
+50% {
+    transform: scale(1.2);
+}
+
+100% {
+    transform: scale(1);
+}
+}
+
+@keyframes dislike_effect {
+0% {
+    transform: scale(0);
+}
+
+50% {
+    transform: scale(1.2);
+}
+
+100% {
+    transform: scale(1);
+}
 }
