Atualizando campo de produtos

--- a/style/desktop/_login.css
+++ b/style/desktop/_login.css
@@ -1,5 +1,9 @@
 @import url('../_variaveis.css');
 
+#btn-voltar{
+    cursor: pointer;
+}
+
 .form-buttons{
     display: flex;
     flex-direction: column;
