--- a/style/main.css
+++ b/style/main.css
@@ -144,17 +144,16 @@ body{
     opacity: 0.7;
 }
 
+#btn-voltar{
+    cursor: pointer;
+}
+
 
 .title{
     color: var(--verde-principal);
     text-align: center;
     font-size: 32px;
-    padding: 32px 0 20px
-}
-
-.title-aba{
-    color: var(--texto-secundario);
-    padding-left: 20px;
+    padding: 20px 0;
 }
 
 .text{
