--- a/style/desktop/_favorito.css
+++ b/style/desktop/_favorito.css
@@ -1,5 +1,7 @@
 @import url('./_variaveis.css');
 
-.centro
-weigth= 1000px;
-height= 1000px;
+.centro{
+max-width: 1024px;
+width: 100%;
+margin: 0 auto;
+}
