--- a/style/desktop/_produtos.css
+++ b/style/desktop/_produtos.css
@@ -62,3 +62,44 @@
     font-weight: bold;
     color: var(--verde-botao);
 }
+
+.modal{
+    /* display: none; */
+    position: fixed;
+    z-index: 2; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vw;
+    background-color: var(--background-principal);
+}
+
+.modal-header{
+    justify-content: right;
+}
+
+.modal-body{
+    display: flex;
+    gap: 35px;
+    align-items: center;
+    padding: 50px;
+}
+
+.preco-modal{
+    color: var(--verde-botao);
+    font-size: 32px;
+}
+
+.modal-info{
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
+
+.img-produto{
+    width: 100%;
+}
+
+.button-modal{
+    width: 100%;
+}
