--- a/style/desktop/_produtos.css
+++ b/style/desktop/_produtos.css
@@ -64,18 +64,23 @@
 }
 
 .modal{
-    display: none;
+    /* display: none;
     position: fixed;
     z-index: 2; 
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vw;
-    background-color: var(--background-principal);
+    height: 100vw; */
+    display: none;
+    z-index: 0;
+    margin: 20px 0;
+    border-radius: 12px;
+    border: 1px solid green;
 }
 
 .modal-header{
     justify-content: right;
+    border-radius: 12px 12px 0 0;
 }
 
 .modal-body{
@@ -97,7 +102,7 @@
 }
 
 .img-produto{
-    width: 100%;
+    width: 50%;
 }
 
 .button-modal{
@@ -107,5 +112,9 @@
 @media (max-width: 1024px){
     .modal-body{
         flex-direction: column;
+    }
+
+    .img-produto{
+        width: 100%;
     }
 }
